--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "engines":{
+    "node": "16.x"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
